--- a/style.css
+++ b/style.css
@@ -43,11 +43,9 @@ background-color: black;
   z-index: 999;
 }
 .caracte{
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 55vw;
   height:16vh ;
+  padding: 20px;
 }
 .chien{
 display: flex;
@@ -80,7 +78,7 @@ z-index: 999;
 
 
 h2{
-  align-items: flex-end;
+  align-items: flex-start;
   width: 45vw;
   height: 4.16vh;
   font-family: roboto;
@@ -106,6 +104,7 @@ h3{
   width: 100vw;
   height: 20vh;
   padding: 10px;
+  border-radius: 20px;
   background-color: coral;
 }
 p{
@@ -171,12 +170,14 @@ p{
   width: 49.9vw;
   height: 50vh;
   padding: 10px;
+  border-radius: 20px;
   background-color: coral;
 }
 .food{
   width: 50vw;
   height: 50vh;
   padding: 10px;
+  border-radius: 20px;
   background-color: coral;
 }
 .menu{
@@ -187,7 +188,7 @@ p{
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
   height: 12vh;
-  background-color: blanchedalmond;
+  background-color: black;
 }
 
 a{
