--- a/style.css
+++ b/style.css
@@ -314,11 +314,71 @@ width: 100vw;
 height: 100vh;
 background-color: black;
 }
-.header{
+header{
+  display: flex;
+  flex-wrap: wrap;
   width: 100vw;
-  height: 20vh;
+  height: 17vh;
+  margin: 0;
   background-color:white;
   border-bottom:green solid 0.3vw
+}
+.logoPet{
+  display: flex;
+  justify-content: center;
+  width: 22vw;
+  height: 10vh;
+  z-index: 999;
+}
+#log{
+  align-items: center;
+  display: flex;
+  width: 22vw;
+  height: 10vh;
+  z-index: 999;
+}
+.caracte{
+  width: 55vw;
+  height:16vh ;
+  padding: 20px;
+}
+.chien{
+display: flex;
+justify-content: center;
+  width: 22vw;
+  height: 17vh;
+  border-radius: 40px;
+}
+#chien2{
+  align-items: center;
+  width: 18vw;
+  height: 17vh;
+  border-radius: 40px;
+  background: url(chien-chat.jpg);
+}
+h1{
+  display: flex;
+  align-items: center;
+  font-family: Sofia;
+  width: 24.90vw;
+  height: 5.09vh;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 3.33vw;
+  line-height: 6.94vh;
+  color:rgb(63, 243, 78);
+z-index: 999;
+}
+h2{
+  align-items: flex-start;
+  width: 45vw;
+  height: 4.16vh;
+  font-family: roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1.77vw;
+  line-height: 6.94vh;
+  color: maroon;
 }
 .pets{
   border-right: black solid 0.1vw;
@@ -488,31 +548,6 @@ a span:nth-child(4){
   width:100vw;
   background-color:white;
   border-radius:20px;
-}
-.logoPet{
-  position: absolute;
-  width: 15vw;
-  height: 12vh;
-  left: 0.2vw;
-  top: 8px;
-  background-color: black;
-}
-#log{
-  position: absolute;
-  width: 14vw;
-  height: 10vh;
-  left: 0.2vw;
-  top: 8px;
-  z-index: 999;
-}
-h1{
-font-size:large;
-left:25vw;
-}
-h2{
-  font-size: small;
-  left: 25vw;
-  top: 4px;
 }
 h3{
   display: flex;
