--- a/style.css
+++ b/style.css
@@ -317,26 +317,30 @@ header{
   background-color:white;
   border-bottom:green solid 0.3vw
 }
+.logoPet{
+  width: 20vw;
+}
 #log{
   width: 15vw;
 }
 .caracte{
-  width: 70vw;
+  display: flex;
+  width: 80vw;
   height:55vh ;
   padding: 20px;
 }
 .chien{
 display: flex;
 justify-content: center;
-  width: 14vw;
+  width: 100vw;
   height: 17vh;
   border-radius: 40px;
 }
 #chien2{
   align-items: center;
-  width: 17vw;
+  width: 37vw;
   height: 14vh;
-  border-radius: 40px;
+  border-radius: 60px;
   background: url(chien-chat.jpg);
 }
 h1{
@@ -348,8 +352,9 @@ h1{
 z-index: 999;
 }
 h2{
-  align-items: flex-start;
-  font-size: x-small;
+  display: flex;
+  align-items: center;
+  font-size: medium;
   color: maroon;
   z-index: 999;
 }
