--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ z-index: 999;
 h2{
   display: flex;
   align-items: center;
-  font-size: medium;
+  font-size: small;
   color: maroon;
   z-index: 999;
 }
