--- a/style.css
+++ b/style.css
@@ -345,15 +345,14 @@ justify-content: center;
 }
 h1{
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   font-family: Sofia;
   font-size: large;
   color:rgb(63, 243, 78);
 z-index: 999;
 }
 h2{
-  display: flex;
-  align-items: center;
+  display: inline-flex;
   font-size: small;
   color: maroon;
   z-index: 999;
