--- a/style.css
+++ b/style.css
@@ -355,6 +355,7 @@ a span:nth-child(4){
   @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
 *{
   margin: 0;
+  padding: 0;
   box-sizing: border-box;}
 body{
   display: flex;
@@ -374,8 +375,7 @@ background-color: black;
   display: flex;
   flex-wrap: wrap;
   width: 100vw;
-  height: 19vh;
-  padding: 10px;
+  height: 17vh;
 }
 .logoPet{
   width: 20vw;
@@ -407,7 +407,7 @@ z-index: 999;
 }
 h2{
   display: inline-flex;
-  font-size:x-small;
+  font-size: small;
   color: maroon;
 }
 .pets{
